change WiP aside from using div to using lists and fix the spacing

--- a/sass/_settings.scss
+++ b/sass/_settings.scss
@@ -122,3 +122,39 @@ $global-rounded: 1000px !default;
   float: right;
   width: 40%;
 }
+
+// -- Sidebar / asides
+
+// Title of WiP for WiP widget button area
+p.wip-title {
+  font-size: 75%;
+  font-style: italic;
+  margin-bottom: 0px;
+}
+
+// Status of WiP for WiP aside
+p.wip-status {
+  font-size: 75%;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+// Keep our lists from having bullets
+li.none {
+  list-style-type: none; 
+}
+
+// Universl use padding-bottom
+.pb10 {
+  padding-bottom: 10px; 
+}
+
+// Align widgets when displayed on the left
+.lwidget {
+  margin-left: -30px;
+}
+
+// Shrink the spacing between list items
+ul {
+  margin-bottom: 0px !important; 
+}
